--- a/encoding/encoding.ipynb
+++ b/encoding/encoding.ipynb
@@ -748,7 +748,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "É importante que a matriz não fique granular, como é o encoding por letra e nem com tanto espaço, como a codificação palavra por palavra."
+        "Nenhuma das opções de encdoing acima é recomendável, pois considera-se que a LLM irá receber e/ou gerar, em sua maioria, textos longos. É importante que a matriz não fique granular, como é o encoding por letra e nem com tanto espaço, como a codificação palavra por palavra."
       ],
       "metadata": {
         "id": "XWCIdDCIVpkf"
