ajustes nos comentários.ipynb

--- a/encoding/encoding.ipynb
+++ b/encoding/encoding.ipynb
@@ -462,7 +462,8 @@
       "cell_type": "code",
       "source": [
         "#encoding palavra com palavra faz com que a matriz fique muito vazia, pois\n",
-        "#conteria apenas valores de onde as palavras aparecem ou não.\n",
+        "#conteria apenas valores de onde as palavras aparecem ou não. isto dificulta o\n"
+        "#processamento.\n",
         "texto['texto'].str.get_dummies(' ')"
       ],
       "metadata": {
@@ -748,7 +749,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Nenhuma das opções de encdoing acima é recomendável, pois considera-se que a LLM irá receber e/ou gerar, em sua maioria, textos longos. É importante que a matriz não fique granular, como é o encoding por letra e nem com tanto espaço, como a codificação palavra por palavra."
+        "Nenhuma das opções de encoding acima é recomendável, pois considera-se que a LLM irá receber e/ou gerar, em sua maioria, textos longos. É importante que a matriz não fique granular, como é o encoding por letra e nem com tanto espaço, como a codificação palavra por palavra."
       ],
       "metadata": {
         "id": "XWCIdDCIVpkf"
