ajuste json.ipynb

--- a/encoding/encoding.ipynb
+++ b/encoding/encoding.ipynb
@@ -462,7 +462,7 @@
       "cell_type": "code",
       "source": [
         "#encoding palavra com palavra faz com que a matriz fique muito vazia, pois\n",
-        "#conteria apenas valores de onde as palavras aparecem ou não. isto dificulta o\n"
+        "#conteria apenas valores de onde as palavras aparecem ou não. isto dificulta o\n",
         "#processamento.\n",
         "texto['texto'].str.get_dummies(' ')"
       ],
